# PrincipiaManeuverPlanner

./: .gitignore  CMakeLists.txt  README.md
dependencies/: .gitignore
src/cpp_cli_connector/: CMakeLists.txt  main.cpp
src/plugin/: CMakeLists.txt  main.cs
